W-14146028: Modularize `service` module